<resources>
    <string name="app_name">Introduction</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="cero_app">Cero App</string>
    <string name="do_you_want">Do you want to reduce your carbon footprint? We will help you with it!</string>
    <string name="skip">SKIP</string>
    <string name="next">Next</string>

    <string name="img_description">mainicon</string>

    <!-- page2 -->
    <string name="calculate_e">Calculate Easily</string>
    <string name="your_cars_c">Your cars` carbon footprint with \ntrustful data from ADAC.</string>

    <!-- page3-->
    <string name="set_your_go">Set your goal</string>
    <string name="we_will_sho">We will show you your emissions compared to the average.\nYou can choose individually how much you would like to reduce.</string>

    <!-- page4 -->
    <string name="get_rewarde">Get rewarded</string>
    <string name="if_you_achi">If you achieve your personal goal you \ncan coose between attractive \neco-friendly rewards.</string>

    <!-- calculation -->
    <string-array name="array1">
        <item>Hyundai</item>
        <item>Opel</item>
        <item>Renault</item>
        <item>SEAT</item>
        <item>SKODA</item>
    </string-array>
    <string-array name="Hyundai_array">
        <item>Atos 1.1 Comfort</item>
        <item>Coupé 2.0 GLS</item>
        <item>Elantra 2.0 GLS</item>
    </string-array>
    <string-array name="Opel_array">
        <item>Agila 1.2 Edition </item>
        <item>Astra 1.3 CDTI DPF </item>
        <item>Combo Combi 1.7 CDTI Sport</item>
    </string-array>
    <string-array name="Renault_array">
        <item>Kangoo Rapid Z.E</item>
        <item>Laguna 1.5 dCi Expression</item>
        <item>Twingo TCe 100 Gordini </item>
    </string-array>
    <string-array name="SEAT_array">
        <item>Altea 1.6 Reference </item>
        <item>Exeo 2.0 TDI Style </item>
        <item>Ibiza 1.2 12V Signo </item>
    </string-array>
    <string-array name="SKODA_array">
        <item>Citigo 1.0 Ambition</item>
        <item>Fabia 1.0 TSI Style </item>
        <item>Karoq 1.5 TSI ACT Style DSG</item>
    </string-array>

    <!-- goal setting -->
    <string name="sub">Goal Settings</string>
    <string name="from_main">Your Car\'s CO2 consumption</string>
    <string name="awesome_">Awesome!</string>
    <string name="you_ve_alre">You have already taken the first step on your climate journey!</string>
    <string name="let_s_creat">Lets create your profile</string>
    <string name="assistive_t">Password must be at least 8 characters</string>
    <string name="welcome_bac">Welcome back!</string>
    <string name="don_t_have_">Dont have an account?</string>
    <string name="regTxt">Register</string>
    <string name="let_s_get_t">Your car</string>
    <string name="in_order_to">In order to calculate your carbon footprint, we need to know which car you drive.</string>
    <string name="brand">Brand</string>
    <string name="car_model">Car Model</string>
    <string name="km">How many kilometers do you approximately drive per year?</string>
    <string name="goal_settin">Goal Setting</string>
    <string name="co2">Your Current CO2  Consumption: </string>
    <string name="goalvalue">How much percent you want to reduce: </string>


</resources>
