<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".GoalSettingActivity">

    <TextView
        android:id="@+id/goal_settin"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/goal_settin"
        android:textAppearance="@style/goal_settin" />

    <TextView
        android:id="@+id/co2"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="@string/co2"
        android:textAppearance="@style/co2"
        android:translationY="-2.47sp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/goalvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="@string/goalvalue"
        android:textAppearance="@style/goalvalue"
        android:translationY="-2.47sp" />

    <ImageView
        android:id="@+id/imageV1"
        android:layout_width="300dp"
        android:layout_height="300dp" />

    <TextView
        android:id="@+id/goalNum"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="#ccc"
        android:gravity="center"
        android:padding="10dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Be a Climate Hero" />


</LinearLayout>


