<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F3F5"
    android:orientation="vertical"
    tools:context=".SubActivity">

    <TextView
        android:id="@+id/goal_settin"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/goal_settin"
        android:textAppearance="@style/goal_settin" />

    <TextView
        android:id="@+id/co2"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="@string/co2"
        android:textAppearance="@style/co2"
        android:translationY="-2.47sp" />


    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="24sp" />

    <TextView
        android:id="@+id/goalvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="@string/goalvalue"
        android:textAppearance="@style/goalvalue"
        android:translationY="-2.47sp" />

    <TextView
            android:id="@+id/goalNum"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="50sp" />


    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="381dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_marginTop="0dp"
        android:background="#ccc"
        android:gravity="center"
        android:padding="20dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Be a Climate Hero" />


</LinearLayout>


