<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sample4Fragment">

    <!-- icon -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/appmain_icon"
            android:src="@drawable/appmain_icon"
            android:layout_width="288dp"
            android:layout_height="288dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/img_description" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnClick"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="500dp"
            android:layout_gravity="center"
            android:background="@android:color/background_dark"
            android:gravity="center"
            android:minEms="8"
            android:text="Start"
            android:textAllCaps="false"
            android:textColor="#FFF"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="625dp" />
    </LinearLayout>

    <!-- Get rewarded -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/get_rewarde"
            android:layout_width="363dp"
            android:layout_height="61dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="564dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="0sp"
            android:text="@string/get_rewarde"
            android:textAppearance="@style/get_rewarde" />

    </LinearLayout>

    <!-- If you achieve your personal goal you can coose between attractive eco-friendly rewards. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/if_you_achi"
            android:layout_width="254dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="79dp"
            android:layout_marginTop="623dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:text="@string/if_you_achi"
            android:textAppearance="@style/if_you_achi"
            android:translationY="-0.47sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>